[+] added some APIs [+] merged swagger-integration branch